# AdventOfCode2021

./: .gitignore  CMakeLists.txt  README.md
Day_1_to_8/: CMakeLists.txt
Day_1_to_8/src/common/: main.cpp
Day_1_to_8/src/day1/: main.cpp
Day_1_to_8/src/day2/: main.cpp
Day_1_to_8/src/day3/: main.cpp
Day_1_to_8/src/day4/: main.cpp
Day_1_to_8/src/day8/: main.cpp
Day_9_to_24/AdventOfCode2021/: AdventOfCode2021.sln  README.md
Day_9_to_24/AdventOfCode2021/Day10/: Program.cs
Day_9_to_24/AdventOfCode2021/Day11/: Program.cs
Day_9_to_24/AdventOfCode2021/Day12/: Program.cs
Day_9_to_24/AdventOfCode2021/Day13/: Program.cs
Day_9_to_24/AdventOfCode2021/Day14/: Program.cs
Day_9_to_24/AdventOfCode2021/Day15/: Program.cs
Day_9_to_24/AdventOfCode2021/Day16/: Program.cs
Day_9_to_24/AdventOfCode2021/Day17/: Program.cs
Day_9_to_24/AdventOfCode2021/Day18/: Program.cs
Day_9_to_24/AdventOfCode2021/Day9/: Day9.csproj  Program.cs
Day_9_to_24/AdventOfCode2021/Test/: AlgorithmTests.cs  BinaryTreeTests.cs  PositionTests.cs
Day_9_to_24/AdventOfCode2021/Utilities/: Algorithm.cs  BinaryTree.cs  Position.cs
src/common/: CMakeLists.txt  common.cpp  common.h  linereader.cpp  main.cpp
src/day1/: main.cpp  main1.cpp  main2.cpp
src/day2/: main.cpp
src/day3/: main.cpp
src/day4/: main.cpp
src/day5/: main.cpp
src/day6/: main.cpp
src/day7/: main.cpp
